2024-05-07T08:09:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8981895779 # 250
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-07
* notice: last 14d: unq all: 1 9
* notice: prev accum: outdated-unq outdated-all / unq all: 26 114 / 27 115
* notice: next accum: outdated-unq outdated-all / unq all: 27 115 / 28 124
* notice: prev exec diff / last date diff / accum: unq all: +1 +9 -0 -0 / +1 +9 -0 -0 / 1 9
* notice: removed / changed dates: [2023-07-04] / [2024-05-06]

2023-07-04T16:23:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5456798900 # 960
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-04
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 25 113 / 26 114
* notice: next accum: outdated-unq outdated-all / unq all: 26 114 / 27 115
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-01-13] / [2023-07-04]

2022-10-06T01:16:43Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3193821992
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 23 100 / 24 112
* notice: next accum: outdated-unq outdated-all / unq all: 24 112 / 25 113
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-07-29] / [2022-10-05]

2022-07-30T00:42:54Z:
* notice: last 14d: unq all: 1 12
* notice: prev accum: outdated-unq outdated-all / unq all: 22 89 / 23 100
* notice: next accum: outdated-unq outdated-all / unq all: 23 100 / 24 112