@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-05-07T08:09:13Z",
-  "count_outdated" : 115,
-  "uniques_outdated" : 27,
-  "count" : 124,
-  "uniques" : 28,
+  "timestamp" : "2024-06-05T00:36:32Z",
+  "count_outdated" : 124,
+  "uniques_outdated" : 28,
+  "count" : 125,
+  "uniques" : 29,
   "views" : [
     {
-      "timestamp": "2024-05-06T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 9 ],
-      "count_decinc": [ 0, 9 ],
+      "timestamp": "2024-06-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
