@@ -1,10 +1,10 @@
 {
-  "count": 9,
+  "count": 1,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2024-05-06T00:00:00Z",
-      "count": 9,
+      "timestamp": "2024-06-04T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
