@@ -1,3 +1,12 @@
+2024-06-05T00:36:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9376214420 # 317
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-05
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 27 115 / 28 124
+* notice: next accum: outdated-unq outdated-all / unq all: 28 124 / 29 125
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-05-06] / [2024-06-04]
+
 2024-05-07T08:09:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8981895779 # 250
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-07
